# burdenofproof

./: .gitignore  LICENSE  README.md
demos/city/: city.py  phonestate.py
demos/city/models/: building_pad.egg  house.egg  office_building.egg  orientation_triangle.egg  phone.egg  police_building.egg  sky.egg  terrain.egg  tribunal.egg
demos/city/models/House/: CasaSimples.egg
demos/demo1/: Application.py  CMakeLists.txt  application.py  generatecity.py  generatecityparts.py  myconfig.prc  phonestate.py  testcpp.py  utils.py
demos/demo1/CMakeModules/: FindPanda3D.cmake  testcpp.cmake.in
demos/demo1/city/: blueprint.txt
demos/demo1/cpp/: Character.cpp  Character.hpp  CityBlueprint.cpp  CityBlueprint.hpp  CityBlueprint.hpp.orig  Game.cpp  Game.hpp  Gender.cpp  Gender.hpp  Maths.cpp  Maths.hpp  Persona.cpp  Persona.hpp  Piecewiseconstantchronology.cpp  Piecewiseconstantchronology.hpp  Piecewiselinearchronology.cpp  Piecewiselinearchronology.hpp  Population.cpp  Population.hpp  Propertychronology.cpp  Propertychronology.hpp  Temporalvalue.cpp  Temporalvalue.hpp  Utils.cpp  Utils.hpp  beforestd
demos/demo1/lib/cpplint/: cpplint.py
demos/demo1/management/: classes.class.violet  sequence.seq.violet
demos/demo1/mangement/: classes.class.violet
demos/demo1/models/: building.egg  buildingpad.egg  buildingpad_outline.egg  city.egg  city_outline.egg  ground.egg  neexteriorsidewalk.egg  neexteriorsidewalk_outline.egg  nehalf1sidewalk.egg  nehalf1sidewalk_outline.egg  nehalf2sidewalk.egg  nehalf2sidewalk_outline.egg  neinteriorsidewalk.egg  neinteriorsidewalk_outline.egg  nemarking.egg  nsmarking.egg  nwexteriorsidewalk.egg  nwexteriorsidewalk_outline.egg  nwhalf1sidewalk.egg  nwhalf1sidewalk_outline.egg  nwhalf2sidewalk.egg  nwhalf2sidewalk_outline.egg  nwinteriorsidewalk.egg  nwinteriorsidewalk_outline.egg  nwmarking.egg  orientation_triangle.egg  phone.egg  road.egg  seexteriorsidewalk.egg  seexteriorsidewalk_outline.egg  sehalf1sidewalk.egg  sehalf1sidewalk_outline.egg  sehalf2sidewalk.egg  sehalf2sidewalk_outline.egg  seinteriorsidewalk.egg  seinteriorsidewalk_outline.egg  semarking.egg  swexteriorsidewalk.egg  swexteriorsidewalk_outline.egg  swhalf1sidewalk.egg  (+7 more)
demos/demo1/personas/: p1.txt
demos/demo1/propertyChronologies/: floats.txt  strings.txt
demos/demo1/temporalValues/: gender.txt  string.txt  vec3f.txt
demos/demo1b/: CMakeLists.txt
demos/demo1b/data/: cityblueprint.txt
demos/demo1b/gdd/: gdd.tex
demos/demo1b/gdd/images/: classes.odg
demos/demo1b/lib/cpplint/: cpplint.py
demos/demo1b/src/cpp/: Hello.cpp  Hello.hpp
demos/demo1b/src/python/: bopmodel.py  burdenofproof.py  generatecity.py  generatecityparts.py  motioncontroller.py  orbitalcameracontroller.py  phonestate.py  utils.py
demos/demo1b/test/: testbopmodel.py
demos/generatehuman/: generatehuman.py  humanbuilder.py  importMakehumanData.py  importmakehumandata.py  myconfig.prc  objloader.py  objparser.py  orbitalcameracontroller.py  showhuman.py  utils.py
demos/makehuman/: importMakehumanData.py  obj2egg.py  objparser.py  showhuman.py  utils.py
demos/populace/: .gitignore  CMakeLists.txt
demos/populace/name/: word_list_moby_given_names_english.flat.txt
demos/populace/src/: Character.hpp  Maths.cpp  main.cpp
demos/population/: .gitignore  CMakeLists.txt
demos/population/src/: Character.cpp  Character.hpp  CityBlueprint.cpp  CityBlueprint.hpp  Game.cpp  Game.hpp  MVC_Controller.cpp  MVC_Controller.hpp  MVC_Model.hpp  MVC_Observable.cpp  MVC_Observable.hpp  MVC_Observer.hpp  MVC_View.cpp  MVC_View.hpp  MainView.cpp  MainView.hpp  Maths.hpp  Utils.hpp  main.cpp
